# junctionBp2023

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts  wheel.d.ts
frontend/src/components/message/: MessageContainer.tsx  SystemMessageContainer.tsx  UserMessageContainer.tsx
frontend/src/components/modal/: Modal.tsx
frontend/src/components/progress/: Progress.tsx
frontend/src/components/screens/: EndGame.tsx  InGame.tsx  NewGame.tsx  newGameConstants.ts
frontend/src/components/spinner/: Spinner.tsx
frontend/src/game/: AppBackend.tsx  appReducer.ts  appSocketSubscribe.ts  types.ts  useAppActions.ts  useAppState.ts  useGameState.ts
frontend/src/hooks/: useSocket.ts
scheduler/: Dockerfile  demo_client.py  executor.py  executor_service.py  main.py  socket_wrapper.py  test.py  user_service.py
scheduler/executor/: __init__.py  execution.py  executor.py  service.py
workers/: console_app.py  requirements.txt  socket_app.py
workers/ai_worker/: Dockerfile  __init__.py  custom_config.py  orchestrator.py  orchestrator_local.py  requirements.txt
workers/ai_worker/modules/: module_ai.py  module_base.py  module_eval.py  module_local_mistral.py  module_openai_trial.py  module_sum.py
workers/demo_worker/: Dockerfile  orchestrator.py
workers/worker_base/: __init__.py  console_model_handler.py  model_handler.py  orchestrator_base.py  socket_model_handler.py
(+1 files in other folders)
